--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+spring.profiles.active: DEV
+environment: COMMON
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,13 +12,3 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
-logging:
-  file.name: application.log
-  level:
-    root: WARN
-    org.springframework.web: WARN
-    org.hibernate: ERROR
-    com.bridgelabz: DEBUG
-
-  pattern.console: '%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%lineJ %msg%n'
