--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring.profiles.active: DEV
-environment: COMMON
+spring.profiles.active: dev
 
+environment: COMMON
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -10,5 +10,5 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
